--- a/Copy_of_ann_estimator.ipynb
+++ b/Copy_of_ann_estimator.ipynb
@@ -82,11 +82,7 @@
       "metadata": {
         "id": "p2ou6aWO85Kn",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "f86bd2dc-b49e-4713-af60-6ed419c5bacc"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -104,7 +100,8 @@
         "from keras.optimizers import SGD\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.decomposition import PCA\n",
-        "from sklearn.metrics import f1_score\n",
+        "from sklearn.metrics import roc_auc_score\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.metrics import confusion_matrix\n",
         "import itertools\n",
@@ -146,16 +143,8 @@
         "    plt.ylabel('True label')\n",
         "    plt.xlabel('Predicted label')"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -173,7 +162,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 173
+          "height": 273
         },
         "outputId": "749482da-f77a-4a15-f6bc-0b30e56e9011"
       },
@@ -232,7 +221,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 700
+          "height": 800
         },
         "outputId": "650159df-7237-46a6-f40a-29d4d44c45bd"
       },
@@ -698,7 +687,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 229
+          "height": 329
         },
         "outputId": "b31cbb75-ca8c-4154-c77e-cad44eb3c230"
       },
@@ -1026,28 +1015,6 @@
     },
     {
       "metadata": {
-        "id": "7K_IGOhuEGzR",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "## Quality\n",
-        "'f1' metric stated as target metric for this work.  \n",
-        "There are 2 questions regarding this metric:\n",
-        "1. What kind of f1 metric must be chosen for multiclass classification\n",
-        "1. What is 'good' and what is 'bad' for given f1 value\n",
-        "\n",
-        "Scikit learn provide several types of f1 metric. 2 types are good candidates to use: 'macro' and 'weighted'.  \n",
-        "Macro metric description  from documentation: \"Calculate metrics globally by counting the total true positives, false negatives and false positives.\". So macro is 'objective' metric that provide information how good is estimator for any given class - no meter  of how often this class in dataset.  \n",
-        "Weighted metric: \"Calculate metrics for each label, and find their average, weighted by support (the number of true instances for each label). This alters ‘macro’ to account for label imbalance; it can result in an F-score that is not between precision and recall.\". This metric give more full representation - taking in account number of right answers.  \n",
-        "What metric is better? For the first look weighted is good candidate but for imbalance set (our case) it can produce wrong estimation. For example if we have strongly imbalance set then estimator that always returns this class will be good for weighted metric but in reality possibly it would not be the best case.  \n",
-        "So we will use both f1 metrics: macro and weighted.  \n",
-        "Second question need detailed exploration. There is no formal values for good and bad for f1.  \n",
-        "May be good candidate for bad value is results of Dummy estimator.  \n"
-      ]
-    },
-    {
-      "metadata": {
         "id": "5-0EIdouMn6_",
         "colab_type": "text"
       },
@@ -1065,14 +1032,24 @@
       "cell_type": "code",
       "source": [
         "# crete X and y\n",
-        "X = df.iloc[:,1:-1].copy()\n",
-        "y = df['label']\n",
+        "X = train_df.iloc[:,0:-1].copy()\n",
+        "y = train_df['Y']\n",
         "\n",
         "# divide to train and test\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=3623467829)\n"
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=3623467829)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "8DEIjScrWW8W",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Ground floor estimator"
+      ]
     },
     {
       "metadata": {
@@ -1080,9 +1057,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 314
+          "height": 51
         },
-        "outputId": "c4929aaa-f2c0-4b63-c04a-1dbdeaf9ec1b"
+        "outputId": "0583509a-9be9-4917-95be-b832c9b487e7"
       },
       "cell_type": "code",
       "source": [
@@ -1091,37 +1068,25 @@
         "# calculate ground floor for stratified dummy classifier\n",
         "clf = DummyClassifier(strategy='stratified',random_state=0)\n",
         "clf.fit(X_train, y_train)\n",
-        "y_pred = clf.predict(X_test)\n",
-        "print(\"F1 dummy strified weighted score %f\" % f1_score(y_test, y_pred, average='weighted'))\n",
-        "print(\"F1 dummy strified macro score %f\" % f1_score(y_test, y_pred, average='macro'))\n",
+        "y_pred = clf.predict(X_train)\n",
+        "print(\"F1 dummy stratified  %f\" % roc_auc_score(y_train, y_pred))\n",
         "\n",
         "# calculate ground flow for most_frequent dummy classifier\n",
         "clf = DummyClassifier(strategy='most_frequent',random_state=0)\n",
         "clf.fit(X_train, y_train)\n",
-        "y_pred = clf.predict(X_test)\n",
-        "print(\"F1 dummy most_frequent weighted score %f\" % f1_score(y_test, y_pred, average='weighted'))\n",
-        "print(\"F1 dummy most_frequent macro score %f\" % f1_score(y_test, y_pred, average='macro'))\n",
+        "y_pred = clf.predict(X_train)\n",
+        "print(\"F1 dummy most frequent  %f\" % roc_auc_score(y_train, y_pred))\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "F1 dummy strified weighted score 0.323443\n",
-            "F1 dummy strified macro score 0.212425\n",
-            "F1 dummy most_frequent weighted score 0.306634\n",
-            "F1 dummy most_frequent macro score 0.128933\n"
+            "F1 dummy stratified  0.501272\n",
+            "F1 dummy most frequent  0.500000\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-            "  'precision', 'predicted', average, warn_for)\n"
-          ],
-          "name": "stderr"
         }
       ]
     },
@@ -1132,8 +1097,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Best 'bad' macro score is 0.21 - for stratified dummy estimator.  \n",
-        "Best 'bad' weighted score is 0.32 - also for stratifed estimator."
+        "Bad estimator give us 0.5 AUC_ROC metric"
       ]
     },
     {
@@ -1156,7 +1120,6 @@
       "source": [
         "# import requried modules\n",
         "from sklearn import preprocessing\n",
-        "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.decomposition import PCA\n",
         "from sklearn.svm import SVC\n",
@@ -1211,7 +1174,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "c0702a44-8807-4d45-c50b-390936badc3a"
+        "outputId": "39f1d891-1561-4023-fce9-bc199c60621b"
       },
       "cell_type": "code",
       "source": [
@@ -1221,28 +1184,28 @@
         "from collections import Counter\n",
         "print(sorted(Counter(y_resampled).items()))\n",
         "\n",
-        "# create emty params to fill later\n",
-        "# params = {}\n",
         "\n",
-        "# PCA\n",
-        "pca = PCA(n_components = 512, svd_solver='randomized', whiten=True)\n",
+        "# preprocess features\n",
+        "scaler = StandardScaler().fit(X_train)\n",
+        "X_train = scaler.transform(X_train)\n",
+        "\n",
+        "# create emty params to fill later\n",
+        "params = {}\n",
         "\n",
         "# SVM\n",
         "svm = SVC(kernel='rbf')\n",
-        "# params['svm__gamma'] = [0.005, 0.01, 0.05]\n",
+        "params['svm__gamma'] = [0.005, 0.01, 0.05]\n",
         "\n",
         "# define pipeline\n",
         "pipeline = Pipeline([\n",
-        "    ('pca', pca),\n",
         "    ('svm', svm),\n",
         "])\n",
         "\n",
-        "# grid_search = GridSearchCV(pipeline, params, n_jobs=-1, verbose=1)\n",
+        "grid_search = GridSearchCV(pipeline, params, n_jobs=-1, verbose=1)\n",
         "\n",
         "print(\"Start fitting...\")\n",
         "t0 = time()\n",
-        "# grid_search.fit(X_resampled, y_resampled)\n",
-        "pipeline.fit(X_resampled, y_resampled)\n",
+        "grid_search.fit(X_resampled, y_resampled)\n",
         "\n",
         "print(\"done in %0.3fs\" % (time() - t0))"
       ],
@@ -1251,9 +1214,9 @@
         {
           "output_type": "stream",
           "text": [
-            "[(1, 12181), (2, 12181), (3, 12181), (4, 12181), (5, 12181)]\n",
+            "[(0, 166211), (1, 166211)]\n",
             "Start fitting...\n",
-            "done in 8351.142s\n"
+            "Fitting 3 folds for each of 3 candidates, totalling 9 fits\n"
           ],
           "name": "stdout"
         }
@@ -1272,17 +1235,15 @@
       "cell_type": "code",
       "source": [
         "# print best estimator params\n",
-        "# best_parameters = grid_search.best_estimator_.get_params()\n",
-        "# for param_name in sorted(params.keys()):\n",
-        "#     print(\"\\t%s: %r\" % (param_name, best_parameters[param_name]))\n",
-        "# resultd evalution\n",
-        "# y_pred = grid_search.best_estimator_.predict(X_test)\n",
+        "best_parameters = grid_search.best_estimator_.get_params()\n",
+        "for param_name in sorted(params.keys()):\n",
+        "    print(\"\\t%s: %r\" % (param_name, best_parameters[param_name]))\n",
+        "# result evalution\n",
+        "y_pred = grid_search.best_estimator_.predict(X_test)\n",
         "\n",
-        "y_pred = pipeline.predict(X_test)\n",
-        "print(\"F1 dummy most_frequent weighted score %f\" % f1_score(y_test, y_pred, average='weighted'))\n",
-        "print(\"F1 dummy most_frequent macro score %f\" % f1_score(y_test, y_pred, average='macro'))\n",
+        "print(\"F1 dummy stratified  %f\" % roc_auc_score(y_test, y_pred))\n",
         "cnf_matrix = confusion_matrix(y_test, y_pred)\n",
-        "plot_confusion_matrix(cnf_matrix,[1,2,3,4,5])"
+        "plot_confusion_matrix(cnf_matrix,[1,2])"
       ],
       "execution_count": 0,
       "outputs": [
